[metadata]
name = rpvVoterIndex
version = 0.1.0
author = Robert Edwardes
author_email = robie@fairlines.org
description = Tool to analyse poltical geogrpahies for maliprortation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RobertEdwardes/Vote_Power_Indexes
project_urls =
    Bug Tracker = https://github.com/RobertEdwardes/Vote_Power_Indexes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src